--- a/ui/chart/wkp-ui/templates/deployment.yaml
+++ b/ui/chart/wkp-ui/templates/deployment.yaml
@@ -55,8 +55,8 @@ spec:
         - name: ui-config-volume
           mountPath: /html/ui-config/
         - name: git-deploy-key
-          mountPath: /etc/wkp-ui/ssh # to match location given in image's /etc/ssh/config
-          readOnly: true # this will be the case perforce in K8s >=1.10
+          mountPath: /etc/wkp-ui/ssh
+          readOnly: true
         {{- if $configMapName }}
         - name: cluster-components-config-volume
           mountPath: /html/cluster-components-config/
