--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -21,8 +21,8 @@ service:4
 config: # remember to consult `app/ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
-    url: ''
-    branch: ''
+    url: 'git@github.com:foot/wkp-core.git'
+    branch: 'master'
     deployKeySecret:
       name: 'wkp-ui-git-deploy-key'
       key: 'gitDeployKey'
