--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -15,13 +15,13 @@ ingress:
   hosts:
     - chart-example.local
   tls: []
-service:4
+service:
   name: wkp-ui-server
   port: 80
 config: # remember to consult `app/ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
-    url: 'git@github.com:foot/wkp-core.git'
+    url: ''
     branch: 'master'
     deployKeySecret:
       name: 'wkp-ui-git-deploy-key'
