add Resources drilldownLink to yaml

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -84,6 +84,7 @@ config: # remember to consult `app/ui/src/entities/config.ts` before making any 
       dials:
       - resource: cluster_cpu_utilisation
       - resource: cluster_memory_utilisation
+      drilldownLink: cluster_resources
     nodesOverview:
       enabled: true
       title: All Nodes
