--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       - run: make
       - run: make lint
       - deploy:
-          name: Push wksctl to S3
+          name: Push wk to S3
           command: |
             TAG=${CIRCLE_TAG}
             if [ -z "$TAG" ]; then
@@ -58,13 +58,13 @@ jobs:
             if [ -z "${CI_BRANCH}" -o "${CI_BRANCH}" == "master" ]; then
               # aws gets its credential through the AWS_ACCESS_KEY_ID and
               # AWS_SECRET_ACCESS_KEY environment variables.
-              aws s3 cp cmd/wksctl/wksctl s3://weaveworks-wks/wksctl-${TAG}
+              aws s3 cp cmd/wk/wk s3://weaveworks-wks/wk-${TAG}
             fi
       - persist_to_workspace:
           root: .
           paths:
           - kubectl
-          - cmd/wksctl/wksctl
+          - cmd/wk/wk
           - cmd/mock-https-authz-server/server
       - run: docker login -u "$DOCKER_IO_USER" -p "$DOCKER_IO_PASSWORD" docker.io
       - run: make push
@@ -225,7 +225,7 @@ jobs:
 
       - attach_workspace:
           at: /tmp/workspace
-      - run: /tmp/workspace/cmd/wksctl/wksctl version
+      - run: /tmp/workspace/cmd/wk/wk version
       - run: env
 
       - run:
@@ -268,7 +268,7 @@ jobs:
 
       - attach_workspace:
           at: /tmp/workspace
-      - run: /tmp/workspace/cmd/wksctl/wksctl version
+      - run: /tmp/workspace/cmd/wk/wk version
       - run: env
 
       - run:
