updates to reflect that the chart is no longer a dial

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -99,7 +99,7 @@ config: # remember to consult `app/ui/src/entities/config.ts` before making any 
     clusterResources:
       enabled: true
       pollInterval: 15s
-      dials:
+      charts:
       - resourceId: cluster_cpu_utilisation
       - resourceId: cluster_memory_utilisation
       drilldownLinkId: cluster_resources
