--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -78,7 +78,7 @@ config: # remember to consult `app/ui/src/entities/config.ts` before making any 
       query: sum(kube_pod_container_resource_requests_cpu_cores) / sum (machine_cpu_cores)
     cluster_memory_utilisation:
       label: Memory
-      query: sum (rate (container_memory_working_set_bytes{id="/"}[5m])) / sum (machine_memory_bytes)
+      query: sum (container_memory_working_set_bytes{id="/"}) / sum (machine_memory_bytes)
     cluster_memory_limits:
       label: Memory Limits
       query: sum(kube_pod_container_resource_limits_memory_bytes) / sum (machine_memory_bytes)
