--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -55,8 +55,8 @@ config: # remember to consult `app/ui/src/entities/config.ts` before making any 
       # E.g. https://mygit.com/foo/commits/{{ commit }}
       commit: ''
   datasources:
-    alertmanager: "http://localhost:9093/api/v1"
-    prometheus: "http://localhost:9090/api/v1"
+    alertmanager: ''
+    prometheus: ''
   drilldownLinksById:
     # Set the url values to make the drilldown links work
     cluster_resources:
