Git cluster update (#919)
* initial backend support for updating git from UI

* missing file from check-in

* Switch to default user info

* move private key in api from file to in-place

* unit tests for updating nested fields

* address review comments

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /cmd/mock-authz-server/server
 /cmd/mock-https-authz-server/server
 /cmd/policy/policy
+/cmd/update-manifest/update-manifest
 /cmd/wks-ci/checks/policy/policy
 /cmd/wks-ci/wks-ci
 /cmd/wks-entitle/wks-entitle
