--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -58,6 +58,8 @@ config: # remember to consult `app/ui/src/entities/config.ts` before making any 
   datasources:
     alertmanager: ''
     prometheus: ''
+  services:
+    gitopsRepoBroker: ''
   drilldownLinksById:
     # Set the url values to make the drilldown links work
     cluster_resources:
