--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -36,8 +36,7 @@ service:
 config: # remember to consult `app/ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
-    # TODO(fbarl): Remove this before merging.
-    url: 'git@github.com:fbarl/wkp-core.git'
+    url: ''
     branch: 'master'
     deployKeySecret:
       name: 'wkp-ui-git-deploy-key'
