custom ssh conf

--- a/cmd/gitops-repo-broker/Dockerfile
+++ b/cmd/gitops-repo-broker/Dockerfile
@@ -1,3 +1,4 @@
 FROM docker.io/governmentpaas/git-ssh
+COPY ./ssh_config /etc/ssh/ssh_config
 ADD gitops-repo-broker /
 ENTRYPOINT ["/gitops-repo-broker"]
