--- a/cmd/gitops-repo-broker/Dockerfile
+++ b/cmd/gitops-repo-broker/Dockerfile
@@ -1,4 +1,10 @@
 FROM docker.io/governmentpaas/git-ssh
-COPY ./ssh_config /etc/ssh/ssh_config
+
+# Add git hosts to known hosts file so we can use
+# StrickHostKeyChecking with git+ssh
+ADD ./known_hosts.sh /home/wkp/known_hosts.sh
+RUN bash /home/wkp/known_hosts.sh /etc/ssh/ssh_known_hosts && \
+    rm /home/wkp/known_hosts.sh
+
 ADD gitops-repo-broker /
 ENTRYPOINT ["/gitops-repo-broker"]
