--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -102,8 +102,7 @@ config: # remember to consult `app/ui/src/entities/config.ts` before making any 
     name: My Cluster
     provider: ''
     regions: ''
-    # Hardcoded for the Kubecon demo - this should be passed as an external argument.
-    managementClusterLink: http://d89b23d5-wkpui-wkpuialbing-603e-1976046370.eu-west-2.elb.amazonaws.com
+    managementClusterLink: ''
   homepage:
     alertNotifications:
       enabled: true
