--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -4,7 +4,7 @@ fullnameOverride: ""
 enabled: true
 image:
   repository: weaveworks/wkp-ui-server
-  tag: 374-cluster-model-lifecycle-create-8660b97
+  tag: master-9f2f094
   pullSecrets: []
   pullPolicy: IfNotPresent
 nginx-ingress:
