--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -34,6 +34,7 @@ service:
   name: wkp-ui-server
   port: 80
 config: # remember to consult `app/ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
+  demoMode: true
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
     url: ''
