Allow specifying of the binary output GOOS

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,11 @@ jobs:
       - checkout
       - <<: *checkoutWithSSH
       - setup_remote_docker
+      - run:
+          name: Build darwin binaries
+          command: |
+            BIN_GOOS=darwin make cmd/wk/wk
+            mv cmd/wk/wk cmd/wk/wk-darwin-amd64
       - run: make
       - run: make lint
       - deploy:
