--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,11 @@ workflows:
               only: /.*/
       - container-tests: {}
       - unit-tests: {}
-      - integration-tests: {}
+      - integration-tests:
+          filters:
+            branches:
+              only:
+                - master
 
 jobs:
   build:
