Read new config file format and generate specific configurations (#1054)
* Read new config file format and generate specific configurations

* initial unit tests and output cleanup

* Finish unit tests, including testing default values

* allow for the fact that USER is unset in hosted build

* Switch to "wks-ssh" and "wks-footloose"; Use docker password file instead of inline password

* add Godoc comments

* make readConfig non-public

* raise memory limit to avoid spurious "make lint" failure

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ workflows:
 jobs:
   build:
     <<: *defaults
+    resource_class: medium+
     steps:
       - checkout
       - <<: *checkoutWithSSH
