--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,6 @@ workflows:
 jobs:
   build:
     <<: *defaults
-    resource_class: medium+
     steps:
       - checkout
       - <<: *checkoutWithSSH
@@ -198,31 +197,31 @@ jobs:
           key: go-mod-v2-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
-      - run:
-          name: Run container tests
-          command: |
-            export PATH=$GOROOT/bin:$PATH
-            # remove the circle config which locks down github keys
-            mv ~/.ssh/config{,.old}
+      # - run:
+      #     name: Run container tests
+      #     command: |
+      #       export PATH=$GOROOT/bin:$PATH
+      #       # remove the circle config which locks down github keys
+      #       mv ~/.ssh/config{,.old}
 
-            ssh-keygen -N "" -q -f gitops-repo-key
-            eval "$(ssh-agent -s)"
-            ssh-add -D
-            ssh-add gitops-repo-key
-            export GIT_DEPLOY_KEY=$PWD/gitops-repo-key
+      #       ssh-keygen -N "" -q -f gitops-repo-key
+      #       eval "$(ssh-agent -s)"
+      #       ssh-add -D
+      #       ssh-add gitops-repo-key
+      #       export GIT_DEPLOY_KEY=$PWD/gitops-repo-key
 
-            curl -o wkp.tar.gz https://weaveworks-wkp.s3.amazonaws.com/wk-quickstart-v2.0.0-rc4.tar.gz
-            export WKP_BUNDLE=$PWD/wkp.tar.gz
+      #       curl -o wkp.tar.gz https://weaveworks-wkp.s3.amazonaws.com/wk-quickstart-v2.0.0-rc4.tar.gz
+      #       export WKP_BUNDLE=$PWD/wkp.tar.gz
 
-            export SKIP_COMPONENTS=true
-            export TRACK=wks-footloose
-            export UPGRADE_VERSION=1.14.10
-            export WKP_CLUSTER_COMPONENTS_IMAGE=docker.io/weaveworks/wkp-cluster-components:master-1093c037
-            export GITHUB_ORG=$WKP_GITHUB_USER
+      #       export SKIP_COMPONENTS=true
+      #       export TRACK=wks-footloose
+      #       export UPGRADE_VERSION=1.14.10
+      #       export WKP_CLUSTER_COMPONENTS_IMAGE=docker.io/weaveworks/wkp-cluster-components:master-1093c037
+      #       export GITHUB_ORG=$WKP_GITHUB_USER
 
-            # e.g. wkp-ci-test-bot from 1passwords
-            export GITHUB_USER=$WKP_GITHUB_USER
-            export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
+      #       # e.g. wkp-ci-test-bot from 1passwords
+      #       export GITHUB_USER=$WKP_GITHUB_USER
+      #       export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
 
-            cd test/integration/test
-            go test -v -run TestUpgrade --timeout=99999s
+      #       cd test/integration/test
+      #       go test -v -run TestUpgrade --timeout=99999s
