Fixes for circle integration tests; read docker password value; minor makefile cleanup (#1065)
* Fixes for circle integration tests; read docker password value; minor makefile cleanup

* Refer to image tag for cluster component image; add cluster/machine.yaml to commit; trim "\n" from docker password file

* Test the integration tests

* Decode ssh private key from base64

* more fixes from testing

* restore inadvertantly removed environment for running setup script

* restore remote creation that broke locally and ignore error in local case

* Testing out alt ssh-key approaches

* Test more standard ways of using ssh keys in circle

* Revert "Test more standard ways of using ssh keys in circle"

This approach did not work, even after restoring ~/.ssh/config

This reverts commit 7ff1ee6d3961b367234a9dfdf419c355acb0f5b4.

* Disable integration tests on branches

Co-authored-by: Jerry Jackson <jerry@weave.works>
Co-authored-by: Simon Howe <footless@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ workflows:
       - container-tests: {}
       - unit-tests: {}
       - integration-tests:
+          requires:
+            - build
           filters:
             branches:
               only:
@@ -213,6 +215,12 @@ jobs:
             export UPGRADE_VERSION=1.14.10
             cd test/integration/test
             sed -i "s/gitHubOrg:.*/gitHubOrg: $WKP_GITHUB_USER/" config.yaml
+
+            echo $WKP_GITHUB_PRIVATE_KEY | base64 -d > user-ssh-key
+            chmod 600 user-ssh-key
+            eval "$(ssh-agent -s)"
+            ssh-add -D
+            ssh-add user-ssh-key
 
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
