[WKP-79] [WKP-82] Fail fast if no ssh connectivity or sudo access (#1068)
* Add connectivity test and clean up setup.sh a bit

* Move SSHKeyFile into sshConfig since footloose generates a local cluster-key

Co-authored-by: Jerry Jackson <jerry@weave.works>

--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -94,15 +94,20 @@ wksConfig:
   # CIDRs (required)
   podCIDRBlocks: [192.168.0.0/16]
 
-  # Path to SSH key file containing private key which provides access to
-  # the cluster machines. The key must correspond to a user with sudo
-  # permission. If left blank, defaults to: "${HOME}/.ssh/id_rsa"
-  sshKeyFile: ""
-
   #
   # SSH-specific configuration (only required for "ssh" clusters)
   #
   sshConfig:
+    # User name to be used when accessing cluster machines via
+    # ssh. The user must have 'sudo' privileges on each machine in the
+    # cluster. If left blank, defaults to: "root"
+    sshUser: "root"
+
+    # Path to SSH key file containing private key which provides access to
+    # the cluster machines. The key must correspond to a user with sudo
+    # permission. If left blank, defaults to: "${HOME}/.ssh/id_rsa"
+    sshKeyFile: ""
+
     # Descriptions for all machines provided to the cluster. A machine
     # spec consists of:
     #   - name: "<1-253 characters matching the pattern:
