doc theme change to books without customisations
- remove JSON output
- change hugo version
- update build
- Download theme before building docs
- favicon, logo, layout, fonts

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /rpm/output
 /test/resource/tests
 /user-guide/public
+/user-guide/resources/_gen
 
 # Ignore generated binaries
 /cmd/wks-controller/controller
