--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 # https://circleci.com/blog/circleci-hacks-reuse-yaml-in-your-circleci-config-with-yaml/
 defaults: &defaults
   docker:
-    - image: docker.io/weaveworks/wks-build:262-improve-troubleshooting-docs-aaa51535
+    - image: docker.io/weaveworks/wks-build:master-192acc36
       environment:
         GOPATH: /go/
         SRCDIR: /src/github.com/weaveworks/wks
@@ -96,7 +96,7 @@ jobs:
 
   unit-tests:
     docker:
-      - image: docker.io/weaveworks/wks-build:262-improve-troubleshooting-docs-aaa51535
+      - image: docker.io/weaveworks/wks-build:master-192acc36
         environment:
           GOPATH: /go
           SRCDIR: /src/github.com/weaveworks/wks
