Now that we're checking for existing files, the upgrade test needs an entry in 'dockerIOPasswordFile'

--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -56,7 +56,7 @@ gitHubOrg: ""
 dockerIOUser: "dummy"
 
 # Path to a file containing password for docker hub user account (required)
-dockerIOPasswordFile: "dummy"
+dockerIOPasswordFile: "/etc/passwd"
 
 #
 # EKS-specific configuration (only required for "eks" clusters)
