Disable integration tests on branches again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,10 @@ workflows:
       - integration-tests:
           requires:
             - build
+          filters:
+            branches:
+              only:
+                - master
 
 jobs:
   build:
